<package>
  <name>turtle_regulation_pemba_nathan1</name>
  <version>1.0.0</version>
  <description>Package for turtle regulation</description>
  <maintainer email="jusdepoire@example.com">Poire</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>turtlesim</run_depend>

  <!-- Service dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>turtlesim</run_depend>

  <!-- Messages -->
  <build_depend>turtlesim</build_depend>
  <run_depend>turtlesim</run_depend>

  <!-- Services -->
  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>

  <!-- Package export information -->
  <export>
    <!-- Specify the ROS message and service files that should be installed -->
    <message file="msg/Turtle.msg"/>
    <service file="srv/waypoint.srv"/>
  </export>
</package>
